--- a/archivist/src/main/resources/templates/fragments/plugins.html
+++ b/archivist/src/main/resources/templates/fragments/plugins.html
@@ -10,7 +10,7 @@
             <div class="navbar navbar-header">
                 <a class="navbar-brand" href="/gui/plugins"><i class="fa fa-plug fa-fw fa-lg"/>Plugins</a>
                 <p class="navbar-section navbar-text">
-                <a th:href="${'/gui/plugins/' + plugin.name}" th:if="${plugin != null}" class="navbar-link" th:text="${plugin.name + ' v' + plugin.version}">...</a>
+                <a th:href="${'/gui/plugins/' + plugin.id}" th:if="${plugin != null}" class="navbar-link" th:text="${plugin.name + ' v' + plugin.version}">...</a>
                 <a href="#" th:if="${processor != null}" class="navbar-link" th:text="${' / ' + processor.name}">...</a>
                 </p>
             </div>
