--- a/archivist/src/main/resources/templates/plugins.html
+++ b/archivist/src/main/resources/templates/plugins.html
@@ -9,7 +9,7 @@
 <section layout:fragment="content">
     <div th:include="fragments/plugins :: menu"/>
     <div class="wrapper">
-    <table class="table table-striped table-hover">
+    <table id="table" class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Name</th>
