--- a/archivist/src/main/resources/templates/processor.html
+++ b/archivist/src/main/resources/templates/processor.html
@@ -18,6 +18,12 @@
             <dd th:text="${processor.description}"></dd>
             <dt>Type:</dt>
             <dd th:text="${processor.type}"></dd>
+            <dt>Filters:</dt>
+            <dd>
+                <ul>
+                    <li th:text="${filter}" th:each="filter: ${processor.filters}"></li>
+                </ul>
+            </dd>
             <dt>Plugin:</dt>
             <dd th:text="${processor.pluginName}"></dd>
             <dt>Version:</dt>
