--- a/archivist/src/main/resources/templates/import.html
+++ b/archivist/src/main/resources/templates/import.html
@@ -28,9 +28,8 @@
         </table>
         <hr width="100%" class="no-margin"/>
         <div th:include="fragments/tasks :: task_table"/>
-    </div>3
+    </div>
     <div th:include="fragments/imports :: modal_create"/>
-
 </section>
 
 </body>
