--- a/archivist/src/main/resources/templates/pipeline.html
+++ b/archivist/src/main/resources/templates/pipeline.html
@@ -82,10 +82,18 @@
                 <div role="tabpanel" class="tab-pane" id="tab-run">
                     <br/>
                     <form class="form-horizontal" id="runForm">
+                    <p class="help-block">Specify a file or a search to process.  Only a single result is processed
+                    from a search.</p>
                     <div class="form-group">
                         <label for="file" class="col-sm-2 control-label">File:</label>
                         <div class="col-sm-10">
                             <input name="file" type="text" class="form-control" rows="15" id="file"></input>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="query" class="col-sm-2 control-label">Search Query:</label>
+                        <div class="col-sm-10">
+                            <input name="query" type="text" class="form-control" rows="15" id="query"></input>
                         </div>
                     </div>
                     <div class="form-group">
@@ -225,6 +233,7 @@
                 var spinner = new Spinner().spin(spinTarget);
 
                 var path = $("#file").val();
+                var query = $("#query").val();
                 var pipeline = get_pipeline();
                 var btn = $(this);
                 btn.prop("disabled", true);
@@ -232,7 +241,7 @@
                 $.ajax({
                     url: "/api/v1/imports/_debug",
                     method: "post",
-                    data: JSON.stringify({"path": path, "pipeline": pipeline}),
+                    data: JSON.stringify({"query" : query, "path": path, "pipeline": pipeline}),
                     dataType: "json",
                     contentType: "application/json; charset=utf-8",
                     success: function (data) {
