--- a/archivist/src/main/resources/templates/import.html
+++ b/archivist/src/main/resources/templates/import.html
@@ -30,6 +30,7 @@
         <div th:include="fragments/tasks :: task_table"/>
     </div>
     <div th:include="fragments/imports :: modal_create"/>
+    <div th:include="fragments/imports :: modal_search"/>
 </section>
 
 </body>
