--- a/archivist/src/main/resources/templates/imports.html
+++ b/archivist/src/main/resources/templates/imports.html
@@ -44,6 +44,7 @@
     </div>
 
     <div th:include="fragments/imports :: modal_create"/>
+    <div th:include="fragments/imports :: modal_search"/>
     <div th:include="fragments/table :: clickable"/>
     <div th:include="fragments/job :: contextMenu"/>
 </section>
