archivist: converted the userId property to a full User object. [Fixes #133211535]

--- a/archivist/src/main/resources/templates/exports.html
+++ b/archivist/src/main/resources/templates/exports.html
@@ -27,7 +27,7 @@
                 </td>
 
                 <td class="vert-align" th:text="${job.name}"></td>
-                <td class="vert-align" th:text="${job.userCreated}"></td>
+                <td class="vert-align" th:text="${job.user.username}"></td>
                 <td class="vert-align" th:text="${#dates.format(job.timeStarted, 'dd MMM yyyy HH:mm')}"></td>
                 <td class="vert-align" th:text="${job.stats.frameTotalCount}"></td>
                 <td class="col-md-4 vert-align">
