--- a/archivist/src/main/resources/templates/export.html
+++ b/archivist/src/main/resources/templates/export.html
@@ -17,7 +17,7 @@
                 </td>
 
                 <td class="vert-align" th:text="${job.name}"></td>
-                <td class="vert-align" th:text="${job.userCreated}"></td>
+                <td class="vert-align" th:text="${job.user.username}"></td>
                 <td class="vert-align" th:text="${#dates.format(job.timeStarted, 'dd MMM yyyy HH:mm')}"></td>
                 <td class="col-md-4 vert-align">
                     <div th:include="fragments/job :: progress"/>
