archivist: allow users to select Path in dyhi creation.

--- a/archivist/src/main/resources/templates/fragments/dyhi.html
+++ b/archivist/src/main/resources/templates/fragments/dyhi.html
@@ -27,6 +27,7 @@
                         <option value="Year">Year</option>
                         <option value="Month">Month</option>
                         <option value="Day">Day</option>
+                        <option value="Path">Path</option>
                     </select>
                 </div>
                 <label class="col-sm-1">Value:</label>
@@ -62,6 +63,7 @@
                         "<option value=\"Year\">Year</option>"+
                         "<option value=\"Month\">Month</option>"+
                         "<option value=\"Day\">Day</option>"+
+                        "<option value=\"Path\">Path</option>"+
                         "</select>"+
                         "</div>"+
                         "<label class=\"col-sm-1\">Value:</label>"+
@@ -95,6 +97,7 @@
                                 "<option value=\"Year\"" + (item["type"] == "Year" ? " selected" : "") + ">Year</option>"+
                                 "<option value=\"Month\"" + (item["type"] == "Month" ? " selected" : "") + ">Month</option>"+
                                 "<option value=\"Day\"" + (item["type"] == "Day" ? " selected" : "") + ">Day</option>"+
+                                "<option value=\"Path\"" + (item["type"] == "Path" ? " selected" : "") + ">Path</option>"+
                                 "</select>"+
                                 "</div>"+
                                 "<label class=\"col-sm-1\">Value:</label>"+
