--- a/archivist/src/main/resources/templates/fragments/imports.html
+++ b/archivist/src/main/resources/templates/fragments/imports.html
@@ -131,6 +131,10 @@
                         <div class="alert alert-warning" role="alert">The Zorroa servers must have access to all files and directories.</div>
                         <form id="serverImportForm" autocomplete="off" action="#" role="form" th:action="@{/gui/imports/server}" th:object="${serverImportForm}" method="post">
                             <div class="form-group">
+                                <label>Name:</label>
+                                <input name="name" id="name" type="text" class="form-control" value="File system import"/>
+                            </div>
+                            <div class="form-group">
                                 <label>Paths:</label>
                                 <div id="pathList" class="list-group"></div>
                                 <div class="input-group">
