--- a/archivist/src/main/resources/templates/fragments/tasks.html
+++ b/archivist/src/main/resources/templates/fragments/tasks.html
@@ -104,14 +104,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:class="${task.stats.frameErrorCount > 0 ? 'clickable-row danger' : 'clickable-row'}" th:attr="data-id=${task.taskId}" th:each="task: ${tasks}">
+        <tr th:class="${task.stats.assetErrorCount > 0 ? 'clickable-row danger' : 'clickable-row'}" th:attr="data-id=${task.taskId}" th:each="task: ${tasks}">
             <td class="vert-align" th:text="${task.taskId}"></td>
             <td class="vert-align" th:text="${task.name}"></td>
             <td class="vert-align">
                 <div th:include="fragments/tasks :: state_label"/>
             </td>
             <td class="vert-align" th:text="${task.duration()}"></td>
-            <td class="vert-align" th:text="${task.stats.frameErrorCount}"></td>
+            <td class="vert-align" th:text="${task.stats.assetErrorCount}"></td>
             <td class="vert-align" th:text="${task.host}"></td>
         </tr>
         </tbody>
